--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,8 +10,32 @@
 html {
     // Defines 1rem and controls overall layout size.
     font-size: 62.5%;
+
+    // @include respond(phone) {
+    //     font-size: 50%;
+    // }
+
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%;
+        
+    }
+    @include respond(phone) {
+        font-size: 30%;
+    }
+    @include respond(big-desktop) {
+        font-size: 75%;
+    }
+
 }
 
 body {
     box-sizing: border-box;
+    padding: 1rem;
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
