--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,7 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey;
-    padding: 1rem;
+    
 }
 
 .heading-primary {
@@ -13,12 +13,21 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
+
+
     &--main {
+
         display: block;
         font-size: 6rem;
         font-weight: 400;
         letter-spacing: 35px;
         animation: moveInLeft 1s ease-in;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        
+        }
     }
     &--sub {
         display: block;
@@ -26,6 +35,12 @@ body {
         font-weight: 700;
         letter-spacing: 1.8rem;
         animation: moveInRight 1s ease-in;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+            
+        
+        }
     }
  
 }
@@ -42,6 +57,13 @@ body {
     transition: .2s transform;
     text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     
+    @include respond(tab-port) {      
+        font-size: 3rem;
+    }
+    @include respond(phone) {
+        font-size: 2.5rem;
+    
+    }
     &:hover {
         transform: skew(2deg, 5deg) scale(1.1);
     }
@@ -51,6 +73,9 @@ body {
     font-size: $default-font-size;
     font-weight: 700;
     text-transform: uppercase;
+    @include respond(tab-port) {
+        padding: 1rem;
+    }
 
 }
 
@@ -60,4 +85,12 @@ body {
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
+    @include respond(tab-port) {
+        padding: 1rem;
+    
+    }
+    // @include respond(phone) {
+    //     padding: 1rem;
+    
+    // }
 }
