--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -8,11 +8,9 @@
     position: relative;
     z-index: 13;
     opacity: 0;
+    max-height: 0;
     visibility: hidden;
     transition: all .3s;
-
-    
-
 
     &__content {
         @include absCenter;
@@ -68,6 +66,11 @@
 
     }
     &:target {
+        position: fixed;
+        top: 0;
+        left: 0;
+        max-height: 100vh;
+        width: 100%;
         opacity: 1;
         visibility: visible;
     }
