--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,10 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
@@ -19,6 +23,10 @@
         border-top: 1px solid $color-grey-light-2;
         padding-top: 2rem;
         display: inline-block;
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
 
     }
 
@@ -58,6 +66,11 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
 
     }
 }
